demo3/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      port: 80
